--- a/client/src/routes/layout/layout.scss
+++ b/client/src/routes/layout/layout.scss
@@ -1,32 +1,45 @@
 @import "../../responsive.scss";
 
 .layout {
-  height: 100vh;
-  max-width: 1366px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  min-height: 100vh;
+  height: auto;
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  padding-top: 0;
+  padding-right: 32px;
+  padding-bottom: 12px;
+  padding-left: 32px;
+  background: #fff;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 
   @include lg {
     // background-color: rgb(247, 210, 196);
     max-width: 1280px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   @include md {
     // background-color: rgb(186, 203, 234);
     max-width: 768px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 8px;
   }
 
   @include sm {
     // background-color: rgb(239, 200, 200);
     max-width: 640px;
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-bottom: 4px;
   }
 
   .content {
-    // flex: 1;
-    height: calc(100vh - 100px);
+    flex: 1;
+    min-height: 0;
   }
 }
