--- a/client/src/components/slider/slider.scss
+++ b/client/src/components/slider/slider.scss
@@ -5,6 +5,7 @@
   height: 350px;
   display: flex;
   gap: 20px;
+  position: relative;
 
   @include sm {
     height: 280px;
@@ -76,9 +77,21 @@
 
   .bigImage {
     flex: 3;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
 
     @include sm {
       flex: 2;
+    }
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
   .smallImages {
@@ -87,16 +100,20 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
+    height: 100%;
 
     @include sm {
       flex: 1;
     }
 
     img {
-      height: 100px;
+      flex: 1;
+      height: calc(33.33% - 14px);
+      min-height: 100px;
+      object-fit: cover;
 
       @include sm {
-        height: 80px;
+        min-height: 80px;
       }
     }
   }
